cabal-version: 2.2
name: digraph
version: 0.1.0.0
synopsis: Directed Graphs
description: Directed graphs implementation that is based on unordered-containers
homepage: https://github.com/kadena-io/digraph
bug-reports: https://github.com/kadena-io/digraph/issues
license: BSD-3-Clause
license-file: LICENSE
author: Lars Kuhtz
maintainer: lars@kadena.io
copyright: Copyright (c) 2019, Kadena LLC
category: Data, Mathematics
extra-source-files:
    README.md
    CHANGELOG.md

source-repository head
    type: git
    location: https://github.com/kadena-io/digraph.git

library
    hs-source-dirs: src
    default-language: Haskell2010
    ghc-options:
        -Wall
    exposed-modules:
          Data.DiGraph
        , Data.DiGraph.FloydWarshall
        , Data.DiGraph.Random
    build-depends:
        base >=4.12 && <4.14
      , QuickCheck >=2.11
      , containers >=0.6
      , deepseq >=1.4
      , fgl >=5.7
      , hashable >=1.3
      , massiv >=0.3
      , mwc-random >=0.14
      , streaming >=0.2
      , transformers >=0.5
      , unordered-containers >=0.2

test-suite digraph-tests
    type: exitcode-stdio-1.0
    hs-source-dirs: test
    default-language: Haskell2010
    main-is: Main.hs
    ghc-options:
        -Wall
        -threaded
        -with-rtsopts=-N
    build-depends:
        -- internal
          digraph

        -- external
        , QuickCheck >=2.11
        , base >=4.12 && <4.14

