cabal-version:      2.4
name:               digraph
version:            0.2.2
synopsis:           Directed Graphs
description:
  Directed graphs implementation that is based on unordered-containers

homepage:           https://github.com/kadena-io/digraph
bug-reports:        https://github.com/kadena-io/digraph/issues
license:            BSD-3-Clause
license-file:       LICENSE
author:             Lars Kuhtz
maintainer:         lars@kadena.io
copyright:          Copyright (c) 2019 - 2021, Kadena LLC
category:           Data, Mathematics
tested-with:        GHC ==8.8.4 || ==8.10.5 || ==9.0.1
extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type:     git
  location: https://github.com/kadena-io/digraph.git

library
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall
  exposed-modules:
    Data.DiGraph
    Data.DiGraph.FloydWarshall
    Data.DiGraph.Random

  build-depends:
    , base                  >=4.10 && <4.17
    , containers            >=0.5
    , deepseq               >=1.4
    , hashable              >=1.2
    , massiv                >=0.3
    , mwc-random            >=0.14
    , streaming             >=0.2
    , transformers          >=0.5
    , unordered-containers  >=0.2

test-suite digraph-tests
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  default-language: Haskell2010
  main-is:          Main.hs
  ghc-options:      -Wall -threaded -with-rtsopts=-N
  other-modules:
    Data.DiGraph.Random.Test
    Data.DiGraph.Test

  build-depends:
    , base        >=4.10 && <=4.16.0.0
    , digraph
    , fgl         >=5.7
    , hashable    >=1.2
    , massiv      >=0.3
    , QuickCheck  >=2.11

-- internal
-- external
